--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -31,6 +31,9 @@ jobs:
         run: npm ci
       - name: Build Angular (production) with base-href
         run: npm run build -- --configuration production --base-href /FrontClub/
+      - name: Create 404.html for SPA fallback
+        run: |
+          cp dist/clubSocialRest/browser/index.html dist/clubSocialRest/browser/404.html
       - name: Disable Jekyll
         run: |
           mkdir -p dist/clubSocialRest/browser
