--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Angular to GitHub Pages
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -20,28 +20,27 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: npm
+
       - name: Install dependencies
         run: npm ci
-      - name: Build Angular (production) with base-href
-        run: npm run build -- --configuration production --base-href /FrontClub/
-      - name: Create 404.html for SPA fallback
-        run: |
-          cp dist/clubSocialRest/browser/index.html dist/clubSocialRest/browser/404.html
-      - name: Disable Jekyll
-        run: |
-          mkdir -p dist/clubSocialRest/browser
-          touch dist/clubSocialRest/browser/.nojekyll
-      - name: Upload artifact
+
+      - name: Build Angular for Pages
+        run: npm run build -- --configuration production --base-href /FrontClub/ --deploy-url /FrontClub/
+
+      - name: Add SPA fallback 404.html
+        run: cp dist/clubSocialRest/browser/index.html dist/clubSocialRest/browser/404.html
+
+      - name: Upload Pages Artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: dist/clubSocialRest/browser
+
   deploy:
     environment:
       name: github-pages
